@@ -1,0 +1,9 @@
+[Eog Plugin]
+Module=fit-to-width
+IAge=2
+_Name=Zoom to fit image width
+Icon=gtk-zoom-fit
+_Description=Zoom to fit image width
+Authors=Javier Sánchez <jsanchez@deskblue.com>
+Copyright=Copyright © 2009 Javier Sánchez 
+Website=http://www.gnome.org/projects/eog
