@@ -1,3 +1,7 @@
+2009-04-27  Felix Riemann  <friemann@svn.gnome.org>
+
+	* POTFILES.in: Add entries for fit-to-width plugin.
+
 2009-04-20  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
